# pipeidea

./: .gitignore  README.md  flowchart.md  pyproject.toml
calibration/: EXECUTION_PLAN.md  README.md
calibration/decisions/: default.md
calibration/rubrics/: realist.md
calibration/seed_packs/: anti_pattern_v1.jsonl  anti_slop_v1.jsonl  canary_v1.jsonl  collision_v1.jsonl  discipline_v1.jsonl  format_v1.jsonl  fuzz_1000_v1.jsonl  randomness_v1.jsonl  signature_v1.jsonl
calibration/suites/: fix_loop_v1.json
cloudflare/: README.md
cloudflare/worker/: package.json  wrangler.toml
cloudflare/worker/public/: app.css  app.js  index.html
cloudflare/worker/src/: commands.mjs  index.mjs  language.mjs  prompt.mjs  providers.mjs  random-stimulus.mjs  sensitivity.mjs  web-fetch.mjs
scripts/: build_eval_pack.py  build_profiles_bundle.py  generate_fuzz_pack.py  run_eval_suite.py  run_heuristic_eval.py
src/pipeidea/: __init__.py  cli.py  config.py  core.py  ideas.py  language.py  sensitivity.py  web.py  web_fetch.py
src/pipeidea/calibration/: __init__.py  artifacts.py  compare.py  realist.py  runner.py
src/pipeidea/profiles/: __init__.py
src/pipeidea/profiles/default/: dialogue.md  identity.md  knowledge.md  output.md  protocol.md  randomness.md  taste.md  techniques.md
src/pipeidea/providers/: base.py  claude.py  openai_compat.py  registry.py
src/pipeidea/realist/: __init__.py  artifacts.py  compare.py  evaluator.py  mappers.py  runner.py  schemas.py
src/pipeidea/soul/: composer.py  profiles.py  random_stimulus.py
(+12 files in other folders)
