[project]
name = "pipeidea"
version = "0.1.0"
description = "AI-powered wild idea generator. Pipe dream + idea."
readme = "README.md"
authors = [
    { name = "Kainan Cha", email = "kainan@layer1-labs.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "openai>=1.30.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
pipeidea = "pipeidea.cli:app"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
